[build-system]
requires = [
    "setuptools==77.0.3",
    "setuptools_scm==8.1.0",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-demo"
description = "A demonstration of the capabilities of the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "desktop",
    "mobile",
    "macOS",
    "cocoa",
    "iOS",
    "android",
    "windows",
    "winforms",
    "linux",
    "gtk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.scripts]
toga-demo = "toga_demo.__main__:run"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "toga == {version}",
]

[tool.briefcase]
project_name = "Toga Demo"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license.file = "LICENSE"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.toga-demo]
formal_name = "Toga Demo"
description = "A demonstration of the capabilities of the Toga widget toolkit."
sources = ["toga_demo"]

requires = [
    "toga"
]

[tool.briefcase.app.toga-demo.macOS]
requires = [
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.toga-demo.linux]

[tool.briefcase.app.toga-demo.linux.system.debian]
system_requires = [
    "libcairo2-dev",
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    "gir1.2-gtk-3.0",
    "libgirepository-1.0-1",
    "libcanberra-gtk3-module",
]

[tool.briefcase.app.toga-demo.linux.system.rhel]
system_requires = [
    "cairo-gobject-devel",
    "gobject-introspection-devel",
]

system_runtime_requires = [
    "gobject-introspection",
    "gtk3",
    "libcanberra-gtk3",
]

[tool.briefcase.app.toga-demo.linux.system.suse]
system_requires = [
    "cairo-devel",
    "gobject-introspection-devel",
]

system_runtime_requires = [
    "gtk3",
    "gobject-introspection", "typelib(Gtk) = 3.0",
    "libcanberra-gtk3-module",
]

[tool.briefcase.app.toga-demo.linux.system.arch]
system_requires = [
    "cairo",
    "gobject-introspection",
    "gtk3",
    "libcanberra",
]

system_runtime_requires = [
    "gtk3",
    "gobject-introspection-runtime",
    "libcanberra",
]

[tool.briefcase.app.toga-demo.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "48"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.toga-demo.windows]

# Mobile deployments
[tool.briefcase.app.toga-demo.iOS]
supported = false

[tool.briefcase.app.toga-demo.android]
supported = false

# Web deployment
[tool.briefcase.app.toga-demo.web]
supported = false


[tool.check-wheel-contents]
# WOO2: duplicated files (i.e. resource images)
ignore = "W002"
