[metadata]
name = toga-demo
version = 0.3.0.dev24
description = A demonstration of the capabilities of the Toga widget toolkit.
url = https://beeware.org/project/projects/libraries/toga/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://toga.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/toga/issues
    Source = https://github.com/beeware/toga
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = BeeWare Team
maintainer_email = team@beeware.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
license = New BSD
license_file = LICENSE
long-description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gui
    widget
    cross-platform
    desktop
    mobile
    macOS
    cocoa
    iOS
    android
    windows
    winforms
    linux
    gtk

[options]
install_requires =
    toga==0.3.0.dev24

packages = find:
python_requires = >= 3.5
zip_safe = False

[options.entry_points]
console_scripts =
    toga-demo = toga_demo.__main__:run

[options.packages.find]
include =
    toga_demo
    toga_demo.*

[options.package_data]
toga_demo.resources =
    *.icns
    *.png

[flake8]
exclude=\
    .eggs/*,\
    build/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[isort]
multi_line_output = 3
