[build-system]
requires = [
    "setuptools==75.8.2",
    "setuptools_scm==8.2.0",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-gtk"
description = "A GTK backend for the Toga widget toolkit."
readme = "README.rst"
requires-python = ">= 3.9"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "linux",
    "freeBSD",
    "gtk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.readthedocs.io/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.readthedocs.io/en/stable/background/project/releases.html"

[project.entry-points."toga.backends"]
linux = "toga_gtk"
freeBSD = "toga_gtk"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "pycairo >= 1.17.0",
    # TODO: PyGObject 3.50.0 is the first version with native GTK asyncio integration;
    # PyGObject 3.51.0 will introduce a dependency on libgirepository-2.0, which isn't
    # available on Ubuntu 22.04 and earlier. We need to make a bunch of other CI and
    # documentation changes to accommodate this. Preemptively protect against the future
    # release of 3.51.0, and the 3.51.0.dev0 pre-release that has been published to
    # PyPI, but has inconsistent metadata and can't be installed with pip. See #3143.
    # "pygobject >= 3.50.0",
    "pygobject == 3.50.0",
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_gtk"]

[tool.coverage.paths]
source = [
    "src/toga_gtk",
    "**/toga_gtk",
]
