[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-gtk"
description = "A GTK backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "linux",
    "freeBSD",
    "gtk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
linux = "toga_gtk"
freeBSD = "toga_gtk"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    # Packaging is part of core Python infrastructure, so no version pin is needed.
    # It is needed to moderate PyGObject version requirements.
    "packaging",
    "pycairo >= 1.17.0",
    # PyGObject 3.50.0 is the first version with native GTK asyncio integration.
    #
    # A version < 3.52.1 is required to support Debian 12 and other distributions that
    # don't provide libgirepository 2.0.
    #
    # However, GTK4 requires the use of a virtual function implementation that is only
    # available on 3.52.1 and higher. The GTK4 requirement is satisfied with an optional
    # dependency.
    "pygobject >= 3.50.0",
    "toga-core == {version}",
]

[project.optional-dependencies]
gtk4 = [
    "pygobject >= 3.52.1",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_gtk"]

[tool.coverage.paths]
source = [
    "src/toga_gtk",
    "**/toga_gtk",
]
