[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-gtk"
description = "A GTK backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "linux",
    "freeBSD",
    "gtk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
linux = "toga_gtk"
freeBSD = "toga_gtk"

[project.entry-points."toga_core.backend.toga_gtk"]
App = "toga_gtk.app:App"
Command = "toga_gtk.command:Command"
Font = "toga_gtk.fonts:Font"
Icon = "toga_gtk.icons:Icon"
Image = "toga_gtk.images:Image"
Paths = "toga_gtk.paths:Paths"
dialogs = "toga_gtk.dialogs"
resources = "toga_gtk.resources"

# Hardware
# Camera = "toga_dummy.hardware.camera:Camera"
Location = "toga_gtk.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_gtk.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_gtk.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_gtk.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_gtk.widgets.activityindicator:ActivityIndicator"
Box = "toga_gtk.widgets.box:Box"
Button = "toga_gtk.widgets.button:Button"
Canvas = "toga_gtk.widgets.canvas:Canvas"
DateInput = "toga_gtk.widgets.dateinput:DateInput"
DetailedList = "toga_gtk.widgets.detailedlist:DetailedList"
Divider = "toga_gtk.widgets.divider:Divider"
ImageView = "toga_gtk.widgets.imageview:ImageView"
Label = "toga_gtk.widgets.label:Label"
MapView = "toga_gtk.widgets.mapview:MapView"
MultilineTextInput = "toga_gtk.widgets.multilinetextinput:MultilineTextInput"
NumberInput = "toga_gtk.widgets.numberinput:NumberInput"
OptionContainer = "toga_gtk.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_gtk.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_gtk.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_gtk.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_gtk.widgets.selection:Selection"
Slider = "toga_gtk.widgets.slider:Slider"
SplitContainer = "toga_gtk.widgets.splitcontainer:SplitContainer"
Switch = "toga_gtk.widgets.switch:Switch"
Table = "toga_gtk.widgets.table:Table"
TextInput = "toga_gtk.widgets.textinput:TextInput"
# TimeInput = "toga_gtk.widgets.timeinput:TimeInput"
Tree = "toga_gtk.widgets.tree:Tree"
WebView = "toga_gtk.widgets.webview:WebView"

# Windows
MainWindow = "toga_gtk.window:MainWindow"
Window = "toga_gtk.window:Window"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    # Packaging is part of core Python infrastructure, so no version pin is needed.
    # It is needed to moderate PyGObject version requirements.
    "packaging",
    "pycairo >= 1.17.0",
    # PyGObject 3.50.0 is the first version with native GTK asyncio integration.
    #
    # A version < 3.52.1 is required to support Debian 12 and other distributions that
    # don't provide libgirepository 2.0.
    #
    # However, GTK4 requires the use of a virtual function implementation that is only
    # available on 3.52.1 and higher. The GTK4 requirement is satisfied with an optional
    # dependency.
    "pygobject >= 3.50.0",
    "toga-core == {version}",
]

[project.optional-dependencies]
gtk4 = [
    "pygobject >= 3.52.1",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_gtk"]

[tool.coverage.paths]
source = [
    "src/toga_gtk",
    "**/toga_gtk",
]
