[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools_scm==10.0.5",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-qt"
description = "An Qt (KDE) backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "qt",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]


[project.entry-points."toga.backends"]
linux = "toga_qt"

[project.entry-points."toga_core.backend.toga_qt"]
App = "toga_qt.app:App"
# DocumentApp = "toga_qt.app:DocumentApp"
Command = "toga_qt.command:Command"
Font = "toga_qt.fonts:Font"
Icon = "toga_qt.icons:Icon"
Image = "toga_qt.images:Image"
Paths = "toga_qt.paths:Paths"
dialogs = "toga_qt.dialogs"
resources = "toga_qt.resources"

# Hardware
# Camera = "toga_qt.hardware.camera:Camera"
# Location = "toga_qt.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_qt.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_qt.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_qt.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_qt.widgets.activityindicator:ActivityIndicator"
Box = "toga_qt.widgets.box:Box"
Button = "toga_qt.widgets.button:Button"
Canvas = "toga_qt.widgets.canvas:Canvas"
DateInput = "toga_qt.widgets.dateinput:DateInput"
DetailedList = "toga_qt.widgets.detailedlist:DetailedList"
Divider = "toga_qt.widgets.divider:Divider"
ImageView = "toga_qt.widgets.imageview:ImageView"
Label = "toga_qt.widgets.label:Label"
MapView = "toga_qt.widgets.mapview:MapView"
MultilineTextInput = "toga_qt.widgets.multilinetextinput:MultilineTextInput"
NumberInput = "toga_qt.widgets.numberinput:NumberInput"
OptionContainer = "toga_qt.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_qt.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_qt.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_qt.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_qt.widgets.selection:Selection"
Slider = "toga_qt.widgets.slider:Slider"
SplitContainer = "toga_qt.widgets.splitcontainer:SplitContainer"
Switch = "toga_qt.widgets.switch:Switch"
Table = "toga_qt.widgets.table:Table"
TextInput = "toga_qt.widgets.textinput:TextInput"
TimeInput = "toga_qt.widgets.timeinput:TimeInput"
Tree = "toga_qt.widgets.tree:Tree"
WebView = "toga_qt.widgets.webview:WebView"

# Windows
MainWindow = "toga_qt.window:MainWindow"
Window = "toga_qt.window:Window"

# Canvas implementation
Path2D = "toga_qt.widgets.canvas:Path2D"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "qasync == 0.28.0",
    "toga-core == {version}",
]

[project.optional-dependencies]
pyside6-essentials = [
    "PySide6-Essentials == 6.11.0",
]
pyside6 = [
    "PySide6 == 6.11.0",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_qt"]

[tool.coverage.paths]
source = [
    "src/toga_qt",
    "**/toga_qt",
]
